{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 32,
  "lineage": "e2034140-a657-b0f4-197a-53ce44d3c043",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "DemoResource",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-018c1c51c7a13e363",
            "arn": "arn:aws:ec2:ap-southeast-1:324755211401:instance/i-015387764c8802b0a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-015387764c8802b0a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "EC2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0003b4aa6553a47a0",
            "private_dns": "ip-172-20-10-127.ap-southeast-1.compute.internal",
            "private_ip": "172.20.10.127",
            "public_ip": "13.212.111.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cbbcfe40cf9ccf29",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0df79be072a24738f",
            "tags": {
              "Name": "DemoInstance"
            },
            "tags_all": {
              "Name": "DemoInstance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c45a7fa3657fe76b"
            ]
          },
          "dependencies": [
            "aws_security_group.Project_Sec_Group",
            "aws_subnet.Project-Subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Project-IntGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:324755211401:internet-gateway/igw-023cd7d713dea2f43",
            "id": "igw-023cd7d713dea2f43",
            "owner_id": "324755211401",
            "tags": {
              "Name": "Project-IntGW"
            },
            "tags_all": {
              "Name": "Project-IntGW"
            },
            "vpc_id": "vpc-0835b3ae54d62930b"
          },
          "dependencies": [
            "aws_vpc.Project-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Project_RouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:324755211401:route-table/rtb-0bce8a35253353d88",
            "id": "rtb-0bce8a35253353d88",
            "owner_id": "324755211401",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-023cd7d713dea2f43",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Project_RouteTable"
            },
            "tags_all": {
              "Name": "Project_RouteTable"
            },
            "vpc_id": "vpc-0835b3ae54d62930b"
          },
          "dependencies": [
            "aws_internet_gateway.Project-IntGW",
            "aws_vpc.Project-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Project_Associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad5106d7a5fd97d7",
            "route_table_id": "rtb-0bce8a35253353d88",
            "subnet_id": "subnet-0df79be072a24738f"
          },
          "dependencies": [
            "aws_internet_gateway.Project-IntGW",
            "aws_route_table.Project_RouteTable",
            "aws_subnet.Project-Subnet1",
            "aws_vpc.Project-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Project_Sec_Group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:324755211401:security-group/sg-0c45a7fa3657fe76b",
            "description": "To allow inbound and outbound traffic to my project",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c45a7fa3657fe76b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "My Project Security Group",
            "name_prefix": "",
            "owner_id": "324755211401",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow traffic"
            },
            "tags_all": {
              "Name": "allow traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0835b3ae54d62930b"
          },
          "dependencies": [
            "aws_vpc.Project-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Project-Subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:324755211401:subnet/subnet-0df79be072a24738f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "172.20.10.0/24",
            "id": "subnet-0df79be072a24738f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "324755211401",
            "tags": {
              "Name": "Project-Subnet1"
            },
            "tags_all": {
              "Name": "Project-Subnet1"
            },
            "vpc_id": "vpc-0835b3ae54d62930b"
          },
          "dependencies": [
            "aws_vpc.Project-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Project-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:324755211401:vpc/vpc-0835b3ae54d62930b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-00ef5ada5b94f2170",
            "default_route_table_id": "rtb-011315a634f1b516b",
            "default_security_group_id": "sg-00478303904761531",
            "dhcp_options_id": "dopt-c9da3baf",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0835b3ae54d62930b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-011315a634f1b516b",
            "owner_id": "324755211401",
            "tags": {
              "Name": "Project-VPC"
            },
            "tags_all": {
              "Name": "Project-VPC"
            }
          }
        }
      ]
    }
  ]
}